<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveClips Soccer</string>
    <string name="action_settings">Settings</string>
    <string name="launchScreenLoadingFirstPartMessageText">"You've never experienced"</string>
    <string name="launchScreenLoadingSecondPartMessageText">"live sports like this!"</string>
    <string name="signHeaderMessageText">"--- Connect to start watching clips ---"</string>
    <string name="account_present_confirmation_text">"Already have an account?"</string>
    <string name="signin_now_text">"  Sign In Now"</string>
    <string name="createAccountByEmailHeaderMessageText">"Sign up with e-mail"</string>
    <string name="createAccountByEmailHeaderBarMessageText">"Create Account"</string>
    <string name="signInAccountByEmailHeaderBarMessageText">"Sign In Account"</string>
    <string name="signInAccountByEmailHeaderMessageText">"Sign In with e-mail"</string>
    <string name="alertSettingsHeaderBarMessageText">"Set Alerts"</string>
    <string name="alert_level_first">OFF</string>
    <string name="alert_level_second">LOW</string>
    <string name="alert_level_third">MEDIUM</string>
    <string name="alert_level_fourth">HIGH</string>
	<string name="Connect_now_to_start_watching_clips">--   Connect now to start watching clips   --</string>
	<string name="find_player_hint">Find a player</string>
    <string name="find_player_label">Find a player</string>
	<string name="emptyMyPlayersFirstLabelText">Watch all of the plays from your favorite players</string>
	<string name="emptyMyPlayersSecondLabelText">To track your favorite players, tap here</string>
	<string name="contentDescription">Text For Content Description</string>
	<string name="chooseTeamToFavHeader">"Teams"</string>
	<!-- imageView Content Descriptions -->
	<string name="teamLogo">Team Logo</string>
	<string name="doneButtonImage">Done Button</string>
	<string name="timeLineImage">Time Line</string>
	<string name="playerImage">Player Image</string>
	<string name="infobutton">Info Button</string>
	<string name="clipShare">Share</string>
	
	 <string-array name="highLights_items">
        <item>NFL Highlights</item>
        <item>2013 Best of J.J. Watt: Swats</item>
        <item>2013 Best of J.J. Watt: Sacks</item>
        <item>2013: Best of Reggie Bush</item>
        <item>2013: Best of Matthew Stafford</item>
        <item>2013: Best of Doug Martin</item>
        <item>Niners fail on two-point conversion attempt</item>
        <item>Super Bowl XLVII: Colin Kaepernick highlights</item>
        <item>Super Bowl XLVII: Joe Flacco highlights</item>
    </string-array>
	
</resources>