<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/alertsHeader"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#000000"
        android:gravity="center_horizontal"
        android:text="GB at NE Alerts: Low"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/list_header_title"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/blue_gradient_background"
        android:gravity="center_vertical"
        android:paddingBottom="2dip"
        android:paddingLeft="5dip"
        android:paddingTop="2dip"
        android:text="BASIC"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/basic_alertlevel_seekBar"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="1" />

        <TableLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TableRow>

                <TextView
                    android:id="@+id/off_textview"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/alert_level_first" />

                <TextView
                    android:id="@+id/low_textview"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                     android:text="@string/alert_level_second" />

                <TextView
                    android:id="@+id/medium_textview"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_level_third" />

                <TextView
                    android:id="@+id/high_textview"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                     android:text="@string/alert_level_fourth" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/alert_per_game_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="5-10 alerts per game" />
    </LinearLayout>

    <TextView
        android:id="@+id/list_header_title"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/blue_gradient_background"
        android:gravity="center_vertical"
        android:paddingBottom="2dip"
        android:paddingLeft="5dip"
        android:paddingTop="2dip"
        android:text="ADVANCED"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/all_plays_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="All Plays" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <ToggleButton
                android:id="@+id/all_plays_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#777777" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/top_plays_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Top Plays" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <ToggleButton
                android:id="@+id/top_plays_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#777777" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/scoring_plays_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Scoring Plays" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <ToggleButton
                android:id="@+id/scoring_plays_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#777777" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/turnovers_plays_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Turnovers" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <ToggleButton
                android:id="@+id/turnovers_plays_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#777777" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/red_zone_plays_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Red Zone Plays" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <ToggleButton
                android:id="@+id/red_zone_plays_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="#777777" >
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/passing_plays_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingRight="2dp"
            android:text="Passing Plays" />

        <SeekBar
            android:id="@+id/passing_plays_seekBar"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/passing_plays_textview"
            android:max="99" />

        <LinearLayout
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/passing_plays_seekBar"
            android:layout_toRightOf="@id/passing_plays_textview"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/passing_plays_first_position_textview"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text=">20 YDS" />

            <TextView
                android:id="@+id/passing_plays_second_position_textview"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text=">10 YDS" />

            <TextView
                android:id="@+id/passing_plays_third_position_textview"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="ALL" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#777777" >
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rushing_plays_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Rushing Plays" />

        <SeekBar
            android:id="@+id/rushing_plays_seekBar"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/rushing_plays_textview"
            android:max="99" />

        <LinearLayout
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rushing_plays_seekBar"
            android:layout_toRightOf="@id/rushing_plays_textview"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/rushing_plays_first_position_textview"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text=">10 YDS" />

            <TextView
                android:id="@+id/rushing_plays_second_position_textview"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text=">5 YDS" />

            <TextView
                android:id="@+id/rushing_plays_third_position_textview"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="ALL" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#777777" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/plays_of_the_game_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Plays of the Game (Top Rated)" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <ToggleButton
                android:id="@+id/plays_of_the_game_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#777777" >
    </View>

</LinearLayout>